overflow mobile fixed

--- a/src/app/sass/partials/_base.scss
+++ b/src/app/sass/partials/_base.scss
@@ -3,7 +3,7 @@ html {
 	width: 100%;
 }
 
-body {
+#body {
   background-color: #fff;
   font-family: 'Open Sans', sans-serif;
   font-size: 62.5%;
